[package]
name = "rustcloud"
version = "0.0.4"
authors = ["Cetra3 <cetra3@hotmail.com>"]
description = "Downloads tracks from soundcloud"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"]}
anyhow = "1.0.40"
term-painter = "0.3.0"
id3 = "0.6"
chrono = {version = "0.4.11", features = ["serde"] }
filetime = "*"
regex = "*"

reqwest = { version = "0.11", features = ["json"] }
tokio = { verison = "1.6.1", features = ["full"]}
serde_json = "1.0.64"
futures = "0.3.15"
