[package]
name = "rustcloud"
version = "0.1.4"
authors = ["Cetra3 <cetra3@hotmail.com>"]
description = "Downloads tracks from soundcloud"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"]}
anyhow = "1.0.40"
term-painter = "0.4.0"
id3 = "1.16.2"
chrono = {version = "0.4.11", features = ["serde"] }
regex = "*"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.6.1", features = ["full"]}
serde_json = "1.0.64"
futures = "0.3.15"
gstreamer = "0.23.5"
